# ex4

./: .gitignore  README.md  details.txt
src/: CMakeLists.txt  bfsPathFinder.cpp  direction.hpp  grid.cpp  grid.hpp  main.cpp  point.cpp  point.hpp
src/cacheManager/: cacheManager.hpp
src/cacheManager/fileCacheManager/: fileCacheManager.cpp  fileCacheManager.hpp  folderManager.cpp  folderManager.hpp  sha1.cpp  sha1.hpp
src/clientHandler/: clientHandler.hpp  myClientHandler.cpp  myClientHandler.hpp  myTestClientHandler.cpp  myTestClientHandler.hpp
src/graph/: direction.cpp  direction.hpp  element.cpp  element.hpp  graphPoint.cpp  graphPoint.hpp  graphPointParser.cpp  graphPointParser.hpp  grid.cpp  grid.hpp  gridParser.cpp  gridParser.hpp
src/operatorID/: myTestOperatorID.cpp  myTestOperatorID.hpp  operatorID.cpp  operatorID.hpp  parser.cpp  parser.hpp  pathFind.cpp  pathFind.hpp  pathFindAStar.cpp  pathFindAStar.hpp  pathFindBFS.cpp  pathFindBFS.hpp  pathFindBestFS.cpp  pathFindBestFS.hpp  pathFindDFS.cpp  pathFindDFS.hpp
src/server/: myParallelServer.cpp  myParallelServer.hpp  mySerialServer.cpp  mySerialServer.hpp  server.hpp
src/sha1/: sha1.cpp  sha1.hpp
src/solver/: mySolver.cpp  mySolver.hpp  myTestSolver.cpp  myTestSolver.hpp  solver.hpp
src/tests/: Nisooi.py  basicServer.cpp  betterServer.cpp  properServer.cpp
